<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".ui.photo.PhotoFragment" >-->

<!--    <TextView-->
<!--        android:id="@+id/text_home"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:text="这是拍照分析"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:layout_marginBottom="@dimen/tabs_rg"
    android:gravity="center_horizontal"
    android:layout_marginTop="100dp"
    android:orientation="vertical"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scrollbars="none">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
        <TextView
            android:id="@+id/item1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/photo_item"
            android:elegantTextHeight="false"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/photo_item1"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/photo_detail1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/photo_item"
            android:elegantTextHeight="false"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:text="@string/photo_item2"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:paddingLeft="10dp" />

        <TextView
            android:id="@+id/detail21"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/photo_detail21"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/detail22"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/photo_detail22"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/detail23"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/photo_detail23"
            android:textColor="@color/black" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/jump_to_camera"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:clickable="true"
            android:elevation="3dp"
            android:focusable="auto"
            android:gravity="center"
            android:text="开始拍照"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#3A8FFF"
            android:textSize="25dp"
            android:textStyle="bold"
            app:qmui_backgroundColor="@color/white"
            app:qmui_borderColor="#3A8FFF"
            app:qmui_borderWidth="3dp"
            app:qmui_radius="10dp" />
    </LinearLayout>
    </ScrollView>
<!--    <Button-->
<!--        android:id="@+id/btn3"-->
<!--        style="@style/photoButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="开始拍照"-->
<!--        android:textAllCaps="false" />-->


    <!--    app:qmui_shadowAlpha="0.15"-->
<!--    app:qmui_shadowElevation="14dp"-->
</LinearLayout>